feat: add reports upload image
